# tp-project

./: LICENSE  README.md  example.env  pyproject.toml  test.ipynb
src/tp_project/: main.py
src/tp_project/api/: currency.py  router.py  temperature.py
src/tp_project/core/: config.py
src/tp_project/schemas/: __init__.py  currency.py  temperature.py
src/tp_project/services/: __init__.py  currency.py  temperature.py
